--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "gatsby-starter-hello-world",
+  "name": "elvis-codes-portfolio",
   "private": true,
-  "description": "A simplified bare-bones starter for Gatsby",
+  "description": "",
   "version": "0.1.0",
   "license": "MIT",
   "scripts": {
@@ -15,6 +15,11 @@
   },
   "dependencies": {
     "gatsby": "^2.21.0",
+    "gatsby-image": "^2.4.0",
+    "gatsby-plugin-sass": "^2.3.0",
+    "gatsby-plugin-sharp": "^2.6.0",
+    "gatsby-transformer-sharp": "^2.5.0",
+    "node-sass": "^4.14.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0"
   },
