--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "gatsby-image": "^2.4.0",
     "gatsby-plugin-sass": "^2.3.0",
     "gatsby-plugin-sharp": "^2.6.0",
+    "gatsby-source-filesystem": "^2.3.0",
+    "gatsby-transformer-json": "^2.4.0",
     "gatsby-transformer-sharp": "^2.5.0",
     "node-sass": "^4.14.0",
     "react": "^16.12.0",
